# stock-persona-app

./: .gitignore  README.md
backend/: .env.example  README.md  diagnose.py  optimize.py  pyproject.toml  requirements.txt  run_backtest.py  train.py  try_data.py
backend/app/: config.py  database.py  main.py  models.py  schemas.py
backend/app/api/: backtest.py  validate.py
backend/app/auth/: google.py  jwt_utils.py  router.py
backend/app/ml/: dataset.py  model.py  predictor.py
backend/app/routers/: checkout.py
backend/app/services/: backtest.py  data_loader.py  personas.py  polar_client.py  portfolio.py
backend/backtest_results/: AAPL_20260424_192317.json  AAPL_20260425_191502.json
backend/models/: lstm_direction.pt  norm_stats.json
backend/tests/: test_api.py  test_backtest.py  test_data_loader.py  test_model.py  test_personas.py
docs/: backtest-guide.md  presentation-script.md  presentation-script.txt
frontend/: index.html  package-lock.json  tailwind.config.js
frontend/src/: App.jsx  index.css
frontend/src/api/: checkout.js  client.js
frontend/src/components/: AllTickersChart.jsx  Disclaimer.jsx  EquityChart.jsx  Header.jsx  LoadingSpinner.jsx  MetricsGrid.jsx  PersonaCard.jsx  PersonaCards.jsx  ProtectedRoute.jsx  TickerInput.jsx  TradeHistory.jsx
frontend/src/constants/: personas.js
frontend/src/context/: AuthContext.jsx
frontend/src/pages/: BacktestPage.jsx  Checkout.jsx  CheckoutSuccess.jsx  Dashboard.jsx  GuidePage.jsx  LSTMGuidePage.jsx  Landing.jsx  LoginCallback.jsx  PersonaDetailPage.jsx
