[project]
name = "stock-persona-backend"
version = "0.1.0"
requires-python = ">=3.12, <3.13"
dependencies = [
    "yfinance>=0.2",
    "pandas>=2.0",
    "pyarrow>=14.0",
    "torch>=2.0",
    "numpy>=1.24",
    "matplotlib>=3.7",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
