[project]
name = "stock-persona-backend"
version = "0.1.0"
requires-python = ">=3.12, <3.13"
dependencies = [
    "yfinance>=0.2",
    "pandas>=2.0",
    "pyarrow>=14.0",
    "torch>=2.0",
    "numpy>=1.24",
    "matplotlib>=3.7",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "pydantic>=2.0",
    "sqlalchemy[asyncio]>=2.0",
    "aiosqlite>=0.19",
    "python-jose[cryptography]>=3.3",
    "httpx>=0.27",
    "python-multipart>=0.0.9",
    "pydantic-settings>=2.0",
    "polar-sdk>=0.31.3",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "httpx>=0.27",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
